--- a/src/site/style.scss
+++ b/src/site/style.scss
@@ -25,7 +25,7 @@ a:visited {
 }
 header {
   position: relative;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 10px;
 }
 
@@ -70,7 +70,7 @@ footer {
   flex-direction: column;
   margin: auto;
   min-width: 960px;
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   height: 100vh;
   border: 20px solid transparent;
   box-sizing: border-box;
@@ -92,7 +92,7 @@ main {
 }
 .left {
   float: left;
-  width: 55%;
+  width: 65%;
   height: 100%;
   border: 10px solid transparent;
   box-sizing: border-box;
@@ -100,7 +100,7 @@ main {
 .right {
   position: relative;
   float: right;
-  width: 45%;
+  width: 35%;
   height: 100%;
   border: 10px solid transparent;
   box-sizing: border-box;
