--- a/src/site/style.scss
+++ b/src/site/style.scss
@@ -81,6 +81,73 @@ main {
   height: 100vh;
   display: block;
 }
+#bundle-name {
+  display: inline;
+}
+#filter-btn {
+  display: inline;
+  cursor: pointer;
+}
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #e6e6e6;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  color: rgb(0, 0, 0);
+  width: 50%;
+  text-align: center;
+}
+
+.modal-content h1 {
+  color: rgb(0, 0, 0);
+}
+
+#filter-values a {
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(37, 92, 255);
+  margin: 10px;
+}
+
+#filter-values a:link {
+  color: rgb(37, 92, 255);
+}
+
+#filter-values a:visited {
+  color: rgb(37, 92, 255);
+}
+
+.triangle-icon {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 15px solid #c0c0c0;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* Add animation when hovered over */
+.triangle-icon:hover {
+  border-top: 15px solid #fff;
+}
+
 #bundle-description {
   max-height: 10vh;
   margin-top: 10px;
